C4 Model Updated - could use some tuning

--- a/III Models/3 Model C4/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model C4/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,12 +2,27 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_59820\\1304120184.py:1: DeprecationWarning: \n",
+            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+            "but was not found to be installed on your system.\n",
+            "If this would cause problems for you,\n",
+            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+            "        \n",
+            "  import pandas as pd\n"
+          ]
+        }
+      ],
       "source": [
         "import pandas as pd\n",
         "# Set max columns to display\n",
@@ -25,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -41,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,12 +69,76 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "            DI55102       DI55152       FC55003       FC55552       FC55569  \\\n",
+            "count  51276.000000  51276.000000  51276.000000  51276.000000  51276.000000   \n",
+            "mean       0.943637      0.933149   5996.438769  35905.715089   6607.317682   \n",
+            "std        0.054174      0.030232    858.862368   5055.523287    395.939854   \n",
+            "min        0.800002      0.837031   2823.920000  17996.100000   5135.670000   \n",
+            "25%        0.909285      0.912829   5481.060000  34933.275000   6370.660000   \n",
+            "50%        0.949218      0.933393   6014.140000  37960.000000   6584.415000   \n",
+            "75%        0.984700      0.952681   6562.375000  39022.700000   6823.535000   \n",
+            "max        1.061510      1.025180   9170.840000  52000.000000   8114.690000   \n",
+            "\n",
+            "            FC55576      FFC55555       LC55557       LC90366       LC90368  \\\n",
+            "count  51276.000000  51276.000000  51276.000000  51276.000000  51276.000000   \n",
+            "mean     367.354165      0.771989     69.454574     46.226400     36.433544   \n",
+            "std      256.408521      0.023064      2.904752     28.943898     20.106838   \n",
+            "min        0.000000      0.687883     60.061400      0.000000      0.006367   \n",
+            "25%      186.503750      0.758508     66.945500     21.222600     19.991775   \n",
+            "50%      339.382000      0.773440     70.081050     47.668800     41.422750   \n",
+            "75%      547.502750      0.788222     71.726650     76.976300     51.743250   \n",
+            "max     1132.440000      0.857842     78.662700     87.901600     81.210800   \n",
+            "\n",
+            "            TC55552  \n",
+            "count  51276.000000  \n",
+            "mean     168.789842  \n",
+            "std       15.296005  \n",
+            "min      119.840000  \n",
+            "25%      155.687000  \n",
+            "50%      172.694000  \n",
+            "75%      180.884250  \n",
+            "max      202.625000  \n",
+            "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
+            "count  51276.000000  51276.000000  51276.000000        51276.000000   \n",
+            "mean       6.152577      1.231762     21.188189            0.970658   \n",
+            "std        0.259811      0.729966      2.742453            0.154151   \n",
+            "min        5.175720      0.009510      8.012620            0.350000   \n",
+            "25%        6.008258      0.629523     18.833250            0.875801   \n",
+            "50%        6.144140      1.113490     21.447100            0.941064   \n",
+            "75%        6.296602      1.691958     23.330300            1.034005   \n",
+            "max        7.136170     12.110300     34.783400            1.631470   \n",
+            "\n",
+            "        HydWtr_Na2O  \n",
+            "count  51276.000000  \n",
+            "mean       0.809311  \n",
+            "std        0.696798  \n",
+            "min        0.000000  \n",
+            "25%        0.453939  \n",
+            "50%        0.665013  \n",
+            "75%        0.983819  \n",
+            "max       12.882300  \n",
+            "            Butanol\n",
+            "count  51276.000000\n",
+            "mean       9.823222\n",
+            "std       10.224860\n",
+            "min        0.000000\n",
+            "25%        3.833330\n",
+            "50%        5.900000\n",
+            "75%       10.929050\n",
+            "max       58.786900\n"
+          ]
+        }
+      ],
       "source": [
         "print(df_CDunit.describe())\n",
         "print(df_AlCon.describe())\n",
@@ -68,9 +147,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data type for 'Date' column in df_CDunit: object\n",
+            "Data type for 'Date' column in df_FB554: object\n",
+            "Data type for 'Date' column in df_AlCon: object\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Data type for 'Date' column in df_CDunit:\", df_CDunit['Date'].dtypes)\n",
         "print(\"Data type for 'Date' column in df_FB554:\", df_FB554['Date'].dtypes)\n",
@@ -79,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -90,9 +179,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data type for 'Date' column in df_CDunit: datetime64[ns]\n",
+            "Data type for 'Date' column in df_FB554: datetime64[ns]\n",
+            "Data type for 'Date' column in df_AlCon: datetime64[ns]\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Data type for 'Date' column in df_CDunit:\", df_CDunit['Date'].dtypes)\n",
         "print(\"Data type for 'Date' column in df_FB554:\", df_FB554['Date'].dtypes)\n",
@@ -101,9 +200,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
+            "       'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552'],\n",
+            "      dtype='object')\n",
+            "Index(['Date', 'Butanol'], dtype='object')\n",
+            "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
+            "       'HydWtr_Na2O'],\n",
+            "      dtype='object')\n"
+          ]
+        }
+      ],
       "source": [
         "print(df_CDunit.columns)\n",
         "print(df_FB554.columns)\n",
@@ -112,7 +225,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -133,7 +246,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -161,7 +274,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -180,7 +293,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -225,9 +338,19 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Data type for 'Date' column in df_CDunit: datetime64[ns]\n",
+            "Data type for 'Date' column in df_FB554: datetime64[ns]\n",
+            "Data type for 'Date' column in df_AlCon: datetime64[ns]\n"
+          ]
+        }
+      ],
       "source": [
         "print(\"Data type for 'Date' column in df_CDunit:\", df_CDunit['Date'].dtypes)\n",
         "print(\"Data type for 'Date' column in df_FB554:\", df_FB554['Date'].dtypes)\n",
@@ -237,7 +360,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -263,9 +386,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                 Date  425_pct_Al  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
+            "0 2012-05-16 15:00:00    6.306930    2.505710    21.95810            0.909887   \n",
+            "1 2012-05-16 16:00:00    6.307280    2.507065    21.96075            0.909326   \n",
+            "2 2012-05-16 18:00:00    6.308335    2.511135    21.96865            0.907643   \n",
+            "3 2012-05-16 19:00:00    6.309390    2.515210    21.97655            0.905959   \n",
+            "4 2012-05-16 20:00:00    6.310090    2.517925    21.98185            0.904837   \n",
+            "\n",
+            "   HydWtr_Na2O    Butanol   DI55102   DI55152    FC55003   FC55552   FC55569  \\\n",
+            "0     2.618940  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
+            "1     2.665560  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
+            "2     2.805415  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
+            "3     2.945270  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
+            "4     3.038505  53.635533  0.970441  0.923875  5205.8625  41490.25  6915.535   \n",
+            "\n",
+            "     FC55576  FFC55555    LC55557    LC90366   LC90368    TC55552  \n",
+            "0  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "1  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "2  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "3  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
+            "4  334.65925  0.750611  65.922175  58.413975  51.01720  177.35975  \n"
+          ]
+        }
+      ],
       "source": [
         "# Make sure all your helper functions and initial DataFrames (df_CDunit, df_FB554, df_AlCon) are correctly defined\n",
         "\n",
@@ -278,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -293,9 +443,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2024-03-21 23:07:18.681705\n"
+          ]
+        }
+      ],
       "source": [
         "from datetime import datetime\n",
         "\n",
