--- a/III Models/3 Model C10/5 Preprocessing - Slecected Features/Updated Model/1.0.2 XGB - Tune Trees.ipynb
+++ b/III Models/3 Model C10/5 Preprocessing - Slecected Features/Updated Model/1.0.2 XGB - Tune Trees.ipynb
@@ -914,6 +914,31 @@
       "source": [
         "df_All.columns"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Model saved successfully.\n"
+          ]
+        }
+      ],
+      "source": [
+        "import pickle\n",
+        "\n",
+        "# Assuming your model is trained and stored in xgb_model as shown in your code\n",
+        "\n",
+        "# Save the model to disk\n",
+        "filename = 'C10_xgb_model.sav'\n",
+        "pickle.dump(xgb_model, open(filename, 'wb'))\n",
+        "\n",
+        "print(\"Model saved successfully.\")\n"
+      ]
     }
   ],
   "metadata": {
