Using all data as one set for now, and will filter per model requirements.
This allows for contintuity of previous work, while creating the opportunity to refine the models through SME discussion.

--- a/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,27 +2,12 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 18,
       "metadata": {
         "tags": [],
         "trusted": true
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_23800\\1304120184.py:1: DeprecationWarning: \n",
-            "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
-            "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
-            "but was not found to be installed on your system.\n",
-            "If this would cause problems for you,\n",
-            "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
-            "        \n",
-            "  import pandas as pd\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "# Set max columns to display\n",
@@ -40,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 19,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -56,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 21,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -79,35 +64,35 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "            DI55102       DI55152       FC55003       FC55552       FC55569  \\\n",
+            "            DI55102       DI55152       FC55003       FC55009       FC55552  \\\n",
             "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000   \n",
-            "mean       0.944831      0.933324   5995.076190  36160.195195   6608.439755   \n",
-            "std        0.052697      0.029800    851.268879   4676.181585    381.543221   \n",
-            "min        0.800007      0.837341   2861.120000  18205.900000   5147.960000   \n",
-            "25%        0.910894      0.913208   5483.547500  35010.300000   6379.075000   \n",
-            "50%        0.950356      0.933329   6015.470000  37970.900000   6584.330000   \n",
-            "75%        0.984626      0.952618   6556.990000  39030.775000   6818.920000   \n",
-            "max        1.061510      1.025180   9134.330000  52000.000000   8100.740000   \n",
+            "mean       0.944831      0.933324   5995.076190    847.340213  36160.195195   \n",
+            "std        0.052697      0.029800    851.268879    614.602209   4676.181585   \n",
+            "min        0.800007      0.837341   2861.120000      0.000000  18205.900000   \n",
+            "25%        0.910894      0.913208   5483.547500    294.673500  35010.300000   \n",
+            "50%        0.950356      0.933329   6015.470000    837.947500  37970.900000   \n",
+            "75%        0.984626      0.952618   6556.990000   1327.720000  39030.775000   \n",
+            "max        1.061510      1.025180   9134.330000   2674.790000  52000.000000   \n",
             "\n",
-            "            FC55576      FFC55555       LC55557       LC90366       LC90368  \\\n",
+            "            FC55569       FC55576      FFC55555       LC55557       LC90366  \\\n",
             "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000   \n",
-            "mean     368.052255      0.772328     69.428048     46.226414     36.669846   \n",
-            "std      256.912595      0.022550      2.874277     29.036939     20.023552   \n",
-            "min        0.000000      0.690043     60.147100      0.000000      0.006367   \n",
-            "25%      187.294000      0.758764     66.907750     20.967025     20.683300   \n",
-            "50%      338.340000      0.774042     70.064500     47.586250     41.774450   \n",
-            "75%      545.391250      0.788200     71.645550     76.996200     51.716075   \n",
-            "max     1132.440000      0.852451     78.662700     87.901600     81.210800   \n",
+            "mean    6608.439755    368.052255      0.772328     69.428048     46.226414   \n",
+            "std      381.543221    256.912595      0.022550      2.874277     29.036939   \n",
+            "min     5147.960000      0.000000      0.690043     60.147100      0.000000   \n",
+            "25%     6379.075000    187.294000      0.758764     66.907750     20.967025   \n",
+            "50%     6584.330000    338.340000      0.774042     70.064500     47.586250   \n",
+            "75%     6818.920000    545.391250      0.788200     71.645550     76.996200   \n",
+            "max     8100.740000   1132.440000      0.852451     78.662700     87.901600   \n",
             "\n",
-            "            TC55552  \n",
-            "count  48806.000000  \n",
-            "mean     168.885972  \n",
-            "std       15.367959  \n",
-            "min      120.095000  \n",
-            "25%      155.630000  \n",
-            "50%      172.875000  \n",
-            "75%      181.074000  \n",
-            "max      202.625000  \n",
+            "            LC90368       PI55004       PI55020       TC55552       TI55021  \n",
+            "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000  \n",
+            "mean      36.669846      2.153188     -1.476013    168.885972    223.097969  \n",
+            "std       20.023552      1.166412      1.133132     15.367959      9.877569  \n",
+            "min        0.006367      0.001366     -4.856830    120.095000    205.103000  \n",
+            "25%       20.683300      1.239265     -2.348982    155.630000    217.466000  \n",
+            "50%       41.774450      1.874475     -1.462740    172.875000    220.208000  \n",
+            "75%       51.716075      2.925715     -0.454912    181.074000    223.838750  \n",
+            "max       81.210800      6.177510      2.030470    202.625000    258.435000  \n",
             "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
             "count  48806.000000  48806.000000  48806.000000        48806.000000   \n",
             "mean       6.146661      1.231848     21.202520            0.968714   \n",
@@ -147,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 24,
       "metadata": {},
       "outputs": [
         {
@@ -200,15 +185,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 25,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55552', 'FC55569',\n",
-            "       'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368', 'TC55552'],\n",
+            "Index(['Date', 'DI55102', 'DI55152', 'FC55003', 'FC55009', 'FC55552',\n",
+            "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
+            "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
             "      dtype='object')\n",
             "Index(['Date', 'Butanol'], dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
@@ -225,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -246,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 27,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -274,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 28,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -293,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 29,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -338,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
         {
@@ -360,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 31,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -386,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 32,
       "metadata": {},
       "outputs": [
         {
@@ -400,19 +386,26 @@
             "3 2012-05-16 19:00:00    6.309390    2.515210    21.97655            0.905959   \n",
             "4 2012-05-16 20:00:00    6.310090    2.517925    21.98185            0.904837   \n",
             "\n",
-            "   HydWtr_Na2O    Butanol   DI55102   DI55152    FC55003   FC55552   FC55569  \\\n",
-            "0     2.618940  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "1     2.665560  58.526500  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "2     2.805415  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "3     2.945270  56.692400  0.970151  0.924718  4968.4400  41476.45  6915.395   \n",
-            "4     3.038505  53.635533  0.970441  0.923875  5205.8625  41490.25  6915.535   \n",
+            "   HydWtr_Na2O    Butanol   DI55102   DI55152    FC55003   FC55009   FC55552  \\\n",
+            "0     2.618940  58.526500  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
+            "1     2.665560  58.526500  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
+            "2     2.805415  56.692400  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
+            "3     2.945270  56.692400  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
+            "4     3.038505  53.635533  0.970441  0.923875  5205.8625  1517.235  41490.25   \n",
             "\n",
-            "     FC55576  FFC55555    LC55557    LC90366   LC90368    TC55552  \n",
-            "0  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "1  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "2  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "3  338.08450  0.751216  65.844650  62.291900  51.34935  177.18800  \n",
-            "4  334.65925  0.750611  65.922175  58.413975  51.01720  177.35975  \n"
+            "    FC55569    FC55576  FFC55555    LC55557    LC90366   LC90368   PI55004  \\\n",
+            "0  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
+            "1  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
+            "2  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
+            "3  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
+            "4  6915.535  334.65925  0.750611  65.922175  58.413975  51.01720  1.244733   \n",
+            "\n",
+            "    PI55020    TC55552    TI55021  \n",
+            "0 -0.571436  177.18800  212.94650  \n",
+            "1 -0.571436  177.18800  212.94650  \n",
+            "2 -0.571436  177.18800  212.94650  \n",
+            "3 -0.571436  177.18800  212.94650  \n",
+            "4 -0.603509  177.35975  212.87475  \n"
           ]
         }
       ],
@@ -428,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 33,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -443,14 +436,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-22 01:18:11.254049\n"
+            "2024-03-25 13:03:26.929972\n"
           ]
         }
       ],
