--- a/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/IV Optimize/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 35,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -25,7 +25,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 36,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -41,7 +41,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 37,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -54,7 +54,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 38,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -65,62 +65,62 @@
           "output_type": "stream",
           "text": [
             "            DI55102       DI55152       FC55003       FC55009       FC55552  \\\n",
-            "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000   \n",
-            "mean       0.944831      0.933324   5995.076190    847.340213  36160.195195   \n",
-            "std        0.052697      0.029800    851.268879    614.602209   4676.181585   \n",
-            "min        0.800007      0.837341   2861.120000      0.000000  18205.900000   \n",
-            "25%        0.910894      0.913208   5483.547500    294.673500  35010.300000   \n",
-            "50%        0.950356      0.933329   6015.470000    837.947500  37970.900000   \n",
-            "75%        0.984626      0.952618   6556.990000   1327.720000  39030.775000   \n",
-            "max        1.061510      1.025180   9134.330000   2674.790000  52000.000000   \n",
+            "count  47882.000000  47882.000000  47882.000000  47882.000000  47882.000000   \n",
+            "mean       0.944701      0.933211   5997.086944    849.297049  36164.241341   \n",
+            "std        0.052777      0.029826    846.430455    615.843168   4655.543359   \n",
+            "min        0.800007      0.837130   2895.820000      0.000000  18248.800000   \n",
+            "25%        0.910771      0.913125   5487.892500    296.303500  35009.175000   \n",
+            "50%        0.950268      0.933100   6016.840000    838.676500  37969.850000   \n",
+            "75%        0.984635      0.952443   6557.580000   1332.095000  39030.775000   \n",
+            "max        1.061510      1.025180   9070.260000   2674.790000  52000.000000   \n",
             "\n",
-            "            FC55569       FC55576      FFC55555       LC55557       LC90366  \\\n",
-            "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000   \n",
-            "mean    6608.439755    368.052255      0.772328     69.428048     46.226414   \n",
-            "std      381.543221    256.912595      0.022550      2.874277     29.036939   \n",
-            "min     5147.960000      0.000000      0.690043     60.147100      0.000000   \n",
-            "25%     6379.075000    187.294000      0.758764     66.907750     20.967025   \n",
-            "50%     6584.330000    338.340000      0.774042     70.064500     47.586250   \n",
-            "75%     6818.920000    545.391250      0.788200     71.645550     76.996200   \n",
-            "max     8100.740000   1132.440000      0.852451     78.662700     87.901600   \n",
+            "           FC55569       FC55576      FFC55555       LC55557       LC90366  \\\n",
+            "count  47882.00000  47882.000000  47882.000000  47882.000000  47882.000000   \n",
+            "mean    6608.58185    367.331836      0.772327     69.420935     46.372794   \n",
+            "std      381.83905    256.768671      0.022558      2.867886     29.056864   \n",
+            "min     5147.06000      0.000000      0.690521     60.183500      0.000000   \n",
+            "25%     6379.09500    186.869000      0.758786     66.892925     21.103150   \n",
+            "50%     6584.11000    337.690000      0.774188     70.059650     47.796200   \n",
+            "75%     6817.29000    541.870250      0.788195     71.623600     77.135900   \n",
+            "max     8100.74000   1132.440000      0.852402     78.662700     87.901600   \n",
             "\n",
             "            LC90368       PI55004       PI55020       TC55552       TI55021  \n",
-            "count  48806.000000  48806.000000  48806.000000  48806.000000  48806.000000  \n",
-            "mean      36.669846      2.153188     -1.476013    168.885972    223.097969  \n",
-            "std       20.023552      1.166412      1.133132     15.367959      9.877569  \n",
-            "min        0.006367      0.001366     -4.856830    120.095000    205.103000  \n",
-            "25%       20.683300      1.239265     -2.348982    155.630000    217.466000  \n",
-            "50%       41.774450      1.874475     -1.462740    172.875000    220.208000  \n",
-            "75%       51.716075      2.925715     -0.454912    181.074000    223.838750  \n",
-            "max       81.210800      6.177510      2.030470    202.625000    258.435000  \n",
+            "count  47882.000000  47882.000000  47882.000000  47882.000000  47882.000000  \n",
+            "mean      36.702969      2.153369     -1.480111    168.859646    223.028785  \n",
+            "std       19.918842      1.166228      1.134890     15.402950      9.813243  \n",
+            "min        0.006367      0.001366     -4.872500    119.938000    205.103000  \n",
+            "25%       20.859450      1.241155     -2.353585    155.574250    217.466000  \n",
+            "50%       41.756500      1.873765     -1.466780    172.827500    220.188500  \n",
+            "75%       51.684225      2.922955     -0.456570    181.095000    223.747000  \n",
+            "max       81.210800      6.183410      2.030470    202.625000    258.323000  \n",
             "         425_pct_Al    C4_pct_Eth    C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "count  48806.000000  48806.000000  48806.000000        48806.000000   \n",
-            "mean       6.146661      1.231848     21.202520            0.968714   \n",
-            "std        0.257063      0.723519      2.743841            0.151169   \n",
-            "min        5.172450      0.085999      8.012620            0.350000   \n",
-            "25%        6.005892      0.628879     18.858000            0.876385   \n",
-            "50%        6.140625      1.104860     21.463750            0.940263   \n",
-            "75%        6.288605      1.696108     23.334350            1.031440   \n",
-            "max        7.138780      9.844330     34.783400            1.629800   \n",
+            "count  47882.000000  47882.000000  47882.000000        47882.000000   \n",
+            "mean       6.145866      1.234021     21.182742            0.968713   \n",
+            "std        0.257564      0.721494      2.742208            0.148910   \n",
+            "min        5.169000      0.086632      8.012620            0.368198   \n",
+            "25%        6.005158      0.631286     18.834675            0.876951   \n",
+            "50%        6.139940      1.119070     21.446600            0.940545   \n",
+            "75%        6.286995      1.697873     23.307850            1.031190   \n",
+            "max        7.138780      9.844330     34.783400            1.606790   \n",
             "\n",
             "        HydWtr_Na2O  \n",
-            "count  48806.000000  \n",
-            "mean       0.811433  \n",
-            "std        0.702541  \n",
+            "count  47882.000000  \n",
+            "mean       0.812880  \n",
+            "std        0.703935  \n",
             "min        0.000000  \n",
-            "25%        0.455526  \n",
-            "50%        0.665238  \n",
-            "75%        0.984490  \n",
+            "25%        0.456972  \n",
+            "50%        0.666249  \n",
+            "75%        0.984538  \n",
             "max       13.026300  \n",
-            "            Butanol\n",
-            "count  48806.000000\n",
-            "mean       9.941539\n",
-            "std       10.284052\n",
-            "min        0.000000\n",
-            "25%        3.893330\n",
-            "50%        5.966670\n",
-            "75%       11.084250\n",
-            "max       58.645000\n"
+            "            Butanol       Decanol\n",
+            "count  47882.000000  47882.000000\n",
+            "mean       9.704321      3.057925\n",
+            "std        9.901038      1.538777\n",
+            "min        0.000000      0.000000\n",
+            "25%        3.866670      1.852232\n",
+            "50%        5.906590      2.960305\n",
+            "75%       10.834625      4.088330\n",
+            "max       57.493600      7.990000\n"
           ]
         }
       ],
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 39,
       "metadata": {},
       "outputs": [
         {
@@ -153,7 +153,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 40,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -164,7 +164,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 41,
       "metadata": {},
       "outputs": [
         {
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 42,
       "metadata": {},
       "outputs": [
         {
@@ -196,7 +196,7 @@
             "       'FC55569', 'FC55576', 'FFC55555', 'LC55557', 'LC90366', 'LC90368',\n",
             "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
             "      dtype='object')\n",
-            "Index(['Date', 'Butanol'], dtype='object')\n",
+            "Index(['Date', 'Butanol', 'Decanol'], dtype='object')\n",
             "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
             "       'HydWtr_Na2O'],\n",
             "      dtype='object')\n"
@@ -211,7 +211,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 43,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -232,7 +232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 44,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -260,7 +260,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 45,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -279,7 +279,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 46,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": 47,
       "metadata": {},
       "outputs": [
         {
@@ -346,7 +346,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": 48,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -372,7 +372,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": 49,
       "metadata": {},
       "outputs": [
         {
@@ -380,32 +380,32 @@
           "output_type": "stream",
           "text": [
             "                 Date  425_pct_Al  C4_pct_Eth  C4_pct_H2O  HydWtr_pct_Ammonia  \\\n",
-            "0 2012-05-16 15:00:00    6.306930    2.505710    21.95810            0.909887   \n",
-            "1 2012-05-16 16:00:00    6.307280    2.507065    21.96075            0.909326   \n",
-            "2 2012-05-16 18:00:00    6.308335    2.511135    21.96865            0.907643   \n",
-            "3 2012-05-16 19:00:00    6.309390    2.515210    21.97655            0.905959   \n",
-            "4 2012-05-16 20:00:00    6.310090    2.517925    21.98185            0.904837   \n",
+            "0 2012-05-16 16:00:00    6.307630    2.508420    21.96340            0.908765   \n",
+            "1 2012-05-16 18:00:00    6.308335    2.511135    21.96865            0.907643   \n",
+            "2 2012-05-16 19:00:00    6.309390    2.515210    21.97655            0.905959   \n",
+            "3 2012-05-16 20:00:00    6.310090    2.517925    21.98185            0.904837   \n",
+            "4 2012-05-16 21:00:00    6.310790    2.520640    21.98715            0.903715   \n",
             "\n",
-            "   HydWtr_Na2O    Butanol   DI55102   DI55152    FC55003   FC55009   FC55552  \\\n",
-            "0     2.618940  58.526500  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
-            "1     2.665560  58.526500  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
-            "2     2.805415  56.692400  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
-            "3     2.945270  56.692400  0.970151  0.924718  4968.4400  1523.030  41476.45   \n",
-            "4     3.038505  53.635533  0.970441  0.923875  5205.8625  1517.235  41490.25   \n",
+            "   HydWtr_Na2O    Butanol   Decanol   DI55102   DI55152  FC55003      FC55009  \\\n",
+            "0     2.712180  54.858300  0.722511  0.970496  0.925255  4919.29  1528.010000   \n",
+            "1     2.805415  54.858300  0.722511  0.970496  0.925255  4919.29  1528.010000   \n",
+            "2     2.945270  54.858300  0.722511  0.970496  0.925255  4919.29  1528.010000   \n",
+            "3     3.038505  51.190050  0.733904  0.970653  0.923773  5268.62  1516.963333   \n",
+            "4     3.131740  48.744567  0.741499  0.970307  0.924103  5349.32  1515.782500   \n",
             "\n",
-            "    FC55569    FC55576  FFC55555    LC55557    LC90366   LC90368   PI55004  \\\n",
-            "0  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
-            "1  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
-            "2  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
-            "3  6915.395  338.08450  0.751216  65.844650  62.291900  51.34935  1.317715   \n",
-            "4  6915.535  334.65925  0.750611  65.922175  58.413975  51.01720  1.244733   \n",
+            "        FC55552      FC55569    FC55576  FFC55555    LC55557    LC90366  \\\n",
+            "0  41564.100000  6918.110000  334.94800  0.751501  65.873400  61.011100   \n",
+            "1  41564.100000  6918.110000  334.94800  0.751501  65.873400  61.011100   \n",
+            "2  41564.100000  6918.110000  334.94800  0.751501  65.873400  61.011100   \n",
+            "3  41524.066667  6916.486667  332.47200  0.750505  65.957600  56.694400   \n",
+            "4  41500.275000  6918.470000  338.63375  0.750325  65.966425  55.181525   \n",
             "\n",
-            "    PI55020    TC55552    TI55021  \n",
-            "0 -0.571436  177.18800  212.94650  \n",
-            "1 -0.571436  177.18800  212.94650  \n",
-            "2 -0.571436  177.18800  212.94650  \n",
-            "3 -0.571436  177.18800  212.94650  \n",
-            "4 -0.603509  177.35975  212.87475  \n"
+            "     LC90368   PI55004   PI55020  TC55552     TI55021  \n",
+            "0  51.234400  1.306310 -0.607993  177.188  212.861000  \n",
+            "1  51.234400  1.306310 -0.607993  177.188  212.861000  \n",
+            "2  51.234400  1.306310 -0.607993  177.188  212.861000  \n",
+            "3  50.868167  1.216603 -0.626386  177.417  212.822333  \n",
+            "4  50.740225  1.206717 -0.632433  177.459  212.799750  \n"
           ]
         }
       ],
@@ -421,7 +421,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": 50,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -436,14 +436,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": 51,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-25 13:03:26.929972\n"
+            "2024-03-25 13:42:25.003225\n"
           ]
         }
       ],
