working on determinant model

--- a/III Models/3 Model C10/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
+++ b/III Models/3 Model C10/5 Preprocessing - Slecected Features/Merge Data/1.1.1 IM - Create Dataset .ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -12,7 +12,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_51588\\1304120184.py:1: DeprecationWarning: \n",
+            "C:\\Users\\austinsh\\AppData\\Local\\Temp\\ipykernel_21752\\1304120184.py:1: DeprecationWarning: \n",
             "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
             "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
             "but was not found to be installed on your system.\n",
@@ -40,7 +40,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -69,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "tags": [],
         "trusted": true
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
@@ -168,7 +168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -179,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {},
       "outputs": [
         {
@@ -200,7 +200,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -226,7 +226,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -247,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -275,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [
         {
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -387,7 +387,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
@@ -436,7 +436,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "Index(['Date', '425_pct_Al', 'C4_pct_Eth', 'C4_pct_H2O', 'HydWtr_pct_Ammonia',\n",
+              "       'HydWtr_Na2O', 'Decanol', 'DI55102', 'DI55152', 'FC55003', 'FC55009',\n",
+              "       'FC55552', 'FC55569', 'FC55576', 'FFC55555', 'LC90366', 'LC90368',\n",
+              "       'PI55004', 'PI55020', 'TC55552', 'TI55021'],\n",
+              "      dtype='object')"
+            ]
+          },
+          "execution_count": 17,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "final_dataset.columns"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -451,14 +475,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "2024-03-21 23:18:21.506184\n"
+            "2024-03-25 15:00:39.848747\n"
           ]
         }
       ],
