Working on Optimization Logic and Functions

--- a/IV Optimize/1.0.0 XGB - SavingsDeterminant.ipynb
+++ b/IV Optimize/1.0.0 XGB - SavingsDeterminant.ipynb
@@ -277,7 +277,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -285,39 +285,67 @@
         "\n",
         "# Load the trained XGBoost model from the .sav file\n",
         "with open(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C10\\5 Preprocessing - Slecected Features\\Updated Model\\C10_xgb_model.sav', 'rb') as model_file:\n",
-        "    xgb_model = pickle.load(model_file)\n",
+        "    c10_model = pickle.load(model_file)\n",
+        "with open(r'C:\\Users\\austinsh\\Project-OptiC4\\III Models\\3 Model C4\\5 Preprocessing - Slecected Features\\Updated Model\\C4_xgb_model.sav', 'rb') as model_file:\n",
+        "    c4_model = pickle.load(model_file)\n",
         "\n",
         "# Initialize the new columns in the original df\n",
         "df_All['FFC55555_adj'] = df_All['FFC55555']\n",
         "df_All['Decanol_adj'] = None  # Using None as a placeholder\n",
+        "df_ALL['Butanol_adj'] = None  # Using None as a placeholder\n",
         "\n",
-        "def predict_decanol(row):\n",
-        "    # Ensure 'row' is prepared correctly for your model\n",
-        "    data_for_prediction = row.values.reshape(1, -1)\n",
-        "    decanol_prediction = xgb_model.predict(data_for_prediction)[0]\n",
-        "    return decanol_prediction\n",
-        "\n",
-        "# Your prediction loop\n",
-        "for index, row in df_All.iterrows():\n",
-        "    # Initial prediction with original FFC55555\n",
-        "    decanol_prediction = predict_decanol(row[feature_names])\n",
+        "def process_record(row):\n",
         "    \n",
-        "    while not 4 < decanol_prediction < 5:\n",
-        "        current_value = df_All.at[index, 'FFC55555_adj']\n",
-        "        \n",
-        "        if decanol_prediction >= 5 and current_value < 0.80:\n",
-        "            df_All.at[index, 'FFC55555_adj'] += 0.01\n",
-        "        elif decanol_prediction <= 4 and current_value > 0.70:\n",
-        "            df_All.at[index, 'FFC55555_adj'] -= 0.01\n",
+        "    \"\"\"\n",
+        "    Process a single record through the model and optimization logic.\n",
+        "    Assumes 'row' is a pandas Series with all needed features.\n",
+        "    \"\"\"\n",
+        "    # Step 1: Process record through model C10\n",
+        "    decanol_prediction = predict_with_model(c10_model, row)\n",
+        "    # Step 2: Process record through model C4 (assuming similar function signature)\n",
+        "    butanol_prediction = predict_with_model(c4_model, row)\n",
+        "    \n",
+        "    # Step 3: Optimization Logic\n",
+        "    if decanol_prediction < 5:\n",
+        "        if butanol_prediction < 62:\n",
+        "            return \"Next Record\"\n",
         "        else:\n",
-        "            break  # Stop if the adjusted value hits its limit\n",
-        "        \n",
-        "        # Prepare for new prediction\n",
-        "        adjusted_row = df_All.loc[index, feature_names].copy()\n",
-        "        adjusted_row['FFC55555'] = df_All.at[index, 'FFC55555_adj']  # Use adjusted FFC55555\n",
-        "        decanol_prediction = predict_decanol(adjusted_row)\n",
-        "    \n",
-        "    df_All.at[index, 'Decanol_adj'] = decanol_prediction\n"
+        "            if row['FFC55555_adj'] > 0.70:\n",
+        "                row['FFC55555_adj'] -= 0.01\n",
+        "                return \"Return to Step 1\"\n",
+        "            else:\n",
+        "                return \"Next Record\"\n",
+        "    else:\n",
+        "        if butanol_prediction < 62:\n",
+        "            if row['FFC55555_adj'] < 1.2:\n",
+        "                if row['FFC55555'] > row['FFC55555_adj']:\n",
+        "                    return \"Next Record\"\n",
+        "                else:\n",
+        "                    row['FFC55555_adj'] += 0.01\n",
+        "                    return \"Return to Step 1\"\n",
+        "            else:\n",
+        "                return \"Next Record\"\n",
+        "        else:\n",
+        "            return \"Next Record\"\n",
+        "\n",
+        "def predict_with_model(model, row):\n",
+        "    \"\"\"\n",
+        "    Predict with the given model.\n",
+        "    Modify this function based on how your models accept data and return predictions.\n",
+        "    \"\"\"\n",
+        "    data_for_prediction = row.values.reshape(1, -1)\n",
+        "    prediction = model.predict(data_for_prediction)[0]\n",
+        "    return prediction\n",
+        "\n",
+        "# Assuming df_All is your DataFrame and it's prepared with 'FFC55555_adj' column\n",
+        "for index, row in df_All.iterrows():\n",
+        "    result = process_record(row)\n",
+        "    if result == \"Return to Step 1\":\n",
+        "        # Add logic here if you need to reprocess the same record\n",
+        "        # Be careful with infinite loops; ensure conditions change to eventually exit the loop\n",
+        "        pass\n",
+        "    # Update the DataFrame with the adjusted 'FFC55555_adj' value\n",
+        "    df_All.at[index, 'FFC55555_adj'] = row['FFC55555_adj']\n"
       ]
     },
     {
